force-app/main/default/objects/Golf_User_Account__c/Golf_User_Account__c.object-meta.xml
<CustomObject>
    <label>Golf User Account</label>
    <nameField>
        <label>Golf User Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Golf User Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>