force-app/main/default/objects/Golf_User_Account__c/fields/GUI__c.field-meta.xml
<CustomField>
    <fullName>GUI__c</fullName>
    <label>GUI</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>