force-app/main/default/objects/Golf_User_Account__c/fields/GUI_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>GUI_Last_Updated__c</fullName>
    <label>GUI Last Updated</label>
    <type>Date</type>
</CustomField>