force-app/main/default/objects/Golf_User_Account__c/fields/Membership_Course__c.field-meta.xml
<CustomField>
    <fullName>Membership_Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Membership Course</label>
    <referenceTo>Membership_Course__c</referenceTo>
    <relationshipLabel>Golf User Accounts</relationshipLabel>
    <relationshipName>Golf_User_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>